Fixed incompatible with Magma Server, closes #160